# jellyserve

./: .gitignore  README.md  app.py  config.py  matchers.py  messages.py  pyproject.toml  readme.md  routes.py  run.py  template.html
frontend/: Hidden.svelte  Index.svelte  Populated.svelte
frontend/.templates/: error.html  template.html  template.js  template.rollup.config.mjs
jellyfish/: core.py  internals.py
jellyserve/: config.py  core.py  db.py  exceptions.py  forms.py  internals.py  messages.py  request.py  response.py
public/: sample.json
sample_project/: app.py  config.py  dev.db  matchers.py  messages.py  routes.py  run.py  test.py
sample_project/frontend/: Index.svelte  Populated.svelte  generator.mjs  package.json
sample_project/frontend/.templates/: error.html  template.html  template.js  template.rollup.config.mjs
src/jellyserve/: __init__.py  _config.py  _exceptions.py  _generator.py  _matchers.py  _middleware.py  _routes.py  _server.py  core.py  db.py  exceptions.py  internals.py  messages.py  request.py  response.py
