[project]
name = "jellyserve"
version = "0.2.0"
authors = [{ name = "Adam Zaoral", email = "the.chosen.zendro@gmail.com" }]
description = "simple python web framework with support for .svelte files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[project.urls]
"Homepage" = "https://github.com/thechosenzendro/jellyserve"
"Bug Tracker" = "https://github.com/thechosenzendro/jellyserve/issues"
